--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="id">
 <head>
   <meta charset="UTF-8">
@@ -6,30 +5,72 @@
   <title>Mitsubishi Jambi - Beranda</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
-  <!-- Header -->
+<body id="top">
+  <!-- Modern Header -->
   <header class="header">
     <div class="container header__inner">
-      <a href="index.html" class="logo">Mitsubishi</a>
+      <a href="index.html" class="logo">🚗 Mitsubishi Jambi</a>
+      <button class="nav-toggle" aria-label="Toggle navigation">
+        <span class="hamburger"></span>
+      </button>
       <nav class="nav">
         <ul class="nav__list">
-          <li><a href="index.html" class="nav__link">Home</a></li>
+          <li><a href="#top" class="nav__link">Home</a></li>
           <li><a href="products.html" class="nav__link">Produk</a></li>
-          <li><a href="simulasi.html" class="nav__link">Simulasi Cicilan</a></li>
+          <li><a href="simulasi.html" class="nav__link">Simulasi</a></li>
           <li><a href="#contact" class="nav__link">Contact</a></li>
         </ul>
       </nav>
-      <button id="theme-toggle" class="theme-toggle">🌙</button>
     </div>
   </header>
-  
-  <!-- Hero Beranda -->
-  <section class="hero home-hero">
+
+  <!-- Hero Section -->
+  <section class="hero">
     <div class="hero__overlay">
       <div class="container hero__content">
-        <h1>Selamat Datang di Mitsubishi Jambi</h1>
-        <p>Temukan penawaran terbaik untuk mobil impian Anda</p>
+        <h1 class="hero__title">Mobil Mitsubishi Terbaik di Jambi</h1>
+        <p class="hero__subtitle">Pilihan lengkap, harga OTR kompetitif, layanan profesional.</p>
         <a href="products.html" class="btn btn--primary">Lihat Produk</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- Home Content: Fitur, Testimonial, CTA -->
+  <section class="section features">
+    <div class="container">
+      <h2 class="section__title">Kenapa Pilih Kami?</h2>
+      <div class="features__grid">
+        <div class="feature">
+          <img src="images/icon-service.svg" alt="Service">
+          <h3>Pelayanan Profesional</h3>
+          <p>Tim sales berpengalaman siap membantu hingga proses selesai.</p>
+        </div>
+        <div class="feature">
+          <img src="images/icon-price.svg" alt="Price">
+          <h3>Harga Transparan</h3>
+          <p>Detail OTR dan biaya tambahan dijelaskan jelas tanpa biaya tersembunyi.</p>
+        </div>
+        <div class="feature">
+          <img src="images/icon-support.svg" alt="Support">
+          <h3>Dukungan Purna Jual</h3>
+          <p>Layanan aftersales dan garansi resmi Mitsubishi.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="section testimonial">
+    <div class="container">
+      <h2 class="section__title">Testimonial</h2>
+      <div class="testimonial__slider">
+        <blockquote>
+          "Pelayanan cepat dan ramah, mobil baru saya sempurna!"
+          <cite>- Andi, Pelanggan</cite>
+        </blockquote>
+        <blockquote>
+          "Harga bersaing dan proses mudah, rekomendasi terbaik di Jambi."
+          <cite>- Budi, Pelanggan</cite>
+        </blockquote>
       </div>
     </div>
   </section>
@@ -42,25 +83,31 @@
       </div>
       <div class="about__content">
         <h2>Lisa Suryani Purba</h2>
-        <p>Sales Counter Resmi Mitsubishi Jambi dengan pengalaman lebih dari 10 tahun.</p>
+        <p>Sales Counter Resmi Mitsubishi Jambi, 10+ tahun pengalaman memastikan Anda mendapatkan penawaran terbaik.</p>
         <a href="https://wa.me/6282173541831" target="_blank" class="btn btn--secondary">Chat WhatsApp</a>
       </div>
     </div>
   </section>
 
-  <!-- Footer -->
+  <!-- Contact Section -->
+  <section id="contact" class="section contact">
+    <div class="container">
+      <h2 class="section__title">Hubungi Kami</h2>
+      <form class="form">
+        <!-- form fields -->
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer & WhatsApp -->
   <footer class="footer">
     <div class="container footer__inner">
-      <p>&copy; 2025 Mitsubishi Jambi. All rights reserved.</p>
-      <div class="social">
-        <a href="#">Facebook</a>
-        <a href="#">Instagram</a>
-      </div>
+      <p>&copy; 2025 Mitsubishi Jambi.</p>
+      <div class="social"><a href="#">FB</a><a href="#">IG</a></div>
     </div>
   </footer>
+  <a href="https://wa.me/6282173541831" class="whatsapp-btn">💬</a>
 
-  <!-- Floating WhatsApp -->
-  <a href="https://wa.me/6282173541831" target="_blank" class="whatsapp-btn">💬</a>
   <script src="script.js" defer></script>
 </body>
 </html>
