--- a/index.html
+++ b/index.html
@@ -1,96 +1,104 @@
 <!DOCTYPE html>
 <html lang="id">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mitsubishi Sales - Lisa Suryani Purba</title>
-  <link rel="stylesheet" href="css/styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mitsubishi Jambi - Lisa Suryani Purba</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Header -->
-  <header>
-    <nav class="navbar">
-      <a href="index.html" class="logo">Mitsubishi Motors</a>
-      <ul class="nav-links">
-        <li><a href="index.html">Beranda</a></li>
-        <li><a href="produk.html">Produk</a></li>
-        <li><a href="simulasi.html">Simulasi Cicilan</a></li>
-      </ul>
-    </nav>
-  </header>
+    <!-- Floating WhatsApp -->
+    <a href="https://wa.me/6282173541831" class="whatsapp-float" target="_blank">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="32" height="32">
+            <path fill="currentColor" d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.24-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L.057 24l6.305-1.654a11.882 11.882 0 005.683 1.448h.005c6.554 0 11.89-5.335 11.893-11.893a11.821 11.821 0 00-3.48-8.413z"/>
+        </svg>
+    </a>
 
-  <!-- Main Content -->
-  <main>
-    <!-- Hero -->
+    <!-- Header -->
+    <header class="main-header">
+        <img src="assets/images/mitsubishi-logo.png" alt="Logo Mitsubishi" class="brand-logo">
+        <nav class="main-nav">
+            <a href="index.html" class="nav-link active">Beranda</a>
+            <a href="produk.html" class="nav-link">Produk</a>
+            <a href="simulasi.html" class="nav-link">Simulasi</a>
+        </nav>
+    </header>
+
+    <!-- Hero Section -->
     <section class="hero">
-      <h1>Selamat Datang di Mitsubishi Sales Jambi</h1>
-      <p>Dapatkan promo menarik dan layanan terbaik dari Lisa Suryani Purba.</p>
-      <a href="https://wa.me/6282173541831" class="btn-cta">Chat via WhatsApp</a>
+        <div class="hero-content">
+            <h1 class="hero-title">Mitsubishi Resmi Jambi</h1>
+            <p class="hero-subtitle">Sales Professional: Lisa Suryani Purba</p>
+            <div class="promo-badge">
+                <span>Gratis Biaya Admin</span>
+                <span>DP Rendah 10%</span>
+            </div>
+            <a href="https://wa.me/6282173541831" class="cta-button">
+                <svg class="whatsapp-icon" viewBox="0 0 24 24" width="24" height="24">
+                    <path fill="currentColor" d="..."/>
+                </svg>
+                Konsultasi Sekarang
+            </a>
+        </div>
     </section>
 
     <!-- Promo Slider -->
-    <section class="promo">
-      <h2>Promo Terbaru</h2>
-      <div class="promo-slider">
-        <img src="assets/images/promo1.jpg" alt="Promo 1">
-        <img src="assets/images/promo2.jpg" alt="Promo 2">
-        <img src="assets/images/promo3.jpg" alt="Promo 3">
-      </div>
+    <section class="promo-slider">
+        <div class="slide active">
+            <h3>Promo Bulan Ini!</h3>
+            <p>Bunga 0% untuk Tenor 1 Tahun</p>
+        </div>
+        <div class="slide">
+            <h3>Cashback 5 Juta</h3>
+            <p>Untuk Pembelian Xpander</p>
+        </div>
     </section>
 
     <!-- Produk Unggulan -->
     <section class="featured-products">
-      <h2>Produk Unggulan</h2>
-      <div class="products">
-        <div class="product-item">
-          <img src="assets/images/suv1.jpg" alt="Model X">
-          <h3>Model X</h3>
-          <p>Rp 500.000.000</p>
+        <h2 class="section-title">Produk Terpopuler</h2>
+        <div class="product-grid">
+            <div class="product-card">
+                <div class="badge">Terlaris</div>
+                <img src="assets/images/xpander.png" alt="Xpander" loading="lazy">
+                <h3>New Xpander</h3>
+                <p class="price">Rp 350.000.000</p>
+                <button class="cta-button">Lihat Detail</button>
+            </div>
+            <!-- Tambahkan produk lainnya -->
         </div>
-        <div class="product-item">
-          <img src="assets/images/sedan1.jpg" alt="Model Y">
-          <h3>Model Y</h3>
-          <p>Rp 450.000.000</p>
-        </div>
-        <div class="product-item">
-          <img src="assets/images/truck1.jpg" alt="Model Z">
-          <h3>Model Z</h3>
-          <p>Rp 600.000.000</p>
-        </div>
-      </div>
     </section>
 
     <!-- Testimoni -->
-    <section class="testimonials">
-      <h2>Testimoni Pelanggan</h2>
-      <div class="testi-cards">
-        <div class="testi-item">
-          <p>"Pelayanan cepat dan ramah!"</p>
-          <span>- Andi, Jambi</span>
+    <section class="testimonial-section">
+        <h2 class="section-title">Testimoni Pelanggan</h2>
+        <div class="testimonial-container">
+            <div class="testimonial-card">
+                <p>"Proses cepat dan transparan, terima kasih Lisa!"</p>
+                <span>- Budi, Jambi</span>
+            </div>
+            <!-- Tambahkan testimoni -->
         </div>
-        <div class="testi-item">
-          <p>"Promo menarik, harga sesuai!"</p>
-          <span>- Budi, Jambi</span>
-        </div>
-        <div class="testi-item">
-          <p>"Proses cukup mudah, recommended!"</p>
-          <span>- Citra, Palembang</span>
-        </div>
-      </div>
     </section>
 
-    <!-- Showroom Map -->
-    <section class="showroom-map">
-      <h2>Lokasi Showroom</h2>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18..." width="100%" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
-  </main>
+    <!-- Footer -->
+    <footer class="main-footer">
+        <div class="footer-content">
+            <div class="contact-info">
+                <h4>Hubungi Kami</h4>
+                <p>Lisa Suryani Purba</p>
+                <p>Sales Counter Mitsubishi</p>
+                <a href="https://wa.me/6282173541831">+62 821-7354-1831</a>
+            </div>
+            <div class="footer-links">
+                <a href="produk.html">Produk</a>
+                <a href="simulasi.html">Simulasi Kredit</a>
+                <a href="https://wa.me/6282173541831">Kontak</a>
+            </div>
+        </div>
+        <p class="copyright">&copy; 2024 Mitsubishi Jambi - Lisa Suryani Purba</p>
+    </footer>
 
-  <!-- Floating WhatsApp Button -->
-  <a href="https://wa.me/6282173541831" class="whatsapp-float" target="_blank">
-    <img src="assets/whatsapp-icon.png" alt="Chat via WhatsApp" />
-  </a>
-
-  <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
